--- a/src/css/style.css
+++ b/src/css/style.css
@@ -171,3 +171,86 @@ svg {
   background-color: var(--bs-black);
   fill: white;
 }
+
+
+.general-content {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  background-color: #000;
+  color: #fff;
+}
+
+.top-bar{
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-div {
+  display: flex;
+  align-items: center;
+}
+
+.search-div .search{
+  margin-top: 10px;
+}
+
+.general-content .icons {
+  width: 20px;
+  height: 20px;
+}
+
+button {
+  color: #fff;
+  font-size: 15px;
+  padding: 10px;
+  margin: 5px;
+}
+
+.site_poster {
+  position: relative;
+  display: inline-block; /* shrink to image size */
+  overflow: hidden; /* keeps caption inside */
+}
+
+.site_poster img {
+  width: 100%;
+  display: block;
+}
+
+.caption {
+  position: absolute;
+  bottom: 0; /* stick to bottom */
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7); /* semi-transparent black */
+  color: white;
+  padding: 1rem;
+}
+
+.caption-text {
+  font-size: 30px;
+}
+
+.nav_bar ul {
+  list-style: none;
+  padding: 30px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+}
+
+.nav_bar svg {
+  width: 24px;
+  height: 24px;
+}
+
+a{
+  text-decoration: none;
+  color: #fff;
+}
+
+a:visited{
+  text-decoration: none;
+  color: #fff;
+}
